Fix chrome crashing in mustash on device.

ChromeDisplayPowerServiceProviderDelegate accesses a nullptr
UserActivityDetector. We don't want Chrome to be handling this task in
mustash, so don't instantiate the service provider.

BUG=643376

Review-Url: https://codereview.chromium.org/2307433004
Cr-Commit-Position: refs/heads/master@{#416085}

Former-commit-id: 237e1315359922b38b4fcf42ad049a55b24d9d85